   * new [unit_side] theme element : this is the side of the current unit (flag)
   * Preprocessor now logs when it encounters an undefined macro, and when it
     fails opening a file.
   * Implemented prerecall/recall. Now prerecruit/recruit will no more trigger
     on recall events
   * Add support for overlay terrains (terrains which can be placed above any
     base terrain)
 * miscellaneous and bug fixes:
   * Changed logging to have less overhead when it is turned off (patch #1038)
   * Fixed error message for broken add-on campaigns (bug #11078)
   * Refactored the in-game console and added help function (patch #1036)
   * Added new commandline options (patch #1031)
     -s or --server [host] connect to host specified or to the first server
     in preferences
     -c or --campaign skip menu and show campaign selection menu
      --with-replay replays the file loaded with --load option.
   * INSTALL now describes the scons build.  autotools, while still present,
     is deprecated.
   * Removed spurious -R linker switch from command line generated by the Boost
     M4 macros
   * Load-game dialog displays a scenario campaign's translated name rather than
     its internal id now
   * wmlxgettext now print some context information about the strings
     extracted (patch #993)
   * Fixed network_worker to span at least one thread (bug #11238)
   * more comprehensive terrain type naming to avoid confusing displays such
     as 'Road (Grassland)' or 'Impassable mountain (Cavewall)'
     This also applies to the WML keys used in the stats :
     - grassland becomes flat
     - tundra becomes frozen
     - canyon becomes unwalkable
     - cavewall becomes impassable
   * added VICTORY_AND_DEFEAT_MUSIC macro - not wiring it in in trunk
     content, in the hope that we get engine support for this soon, but it's
     here to use in the meantime
   * remove an ancient wml update program which has been obsoleted by wmllint
   * added the boost regex dependency