@@ -81,6 +81,7 @@ Version 1.5.0-svn:
      on recall events
    * Add support for overlay terrains (terrains which can be placed above any
      base terrain)
+   * Add multiple types for events
  * miscellaneous and bug fixes:
    * Changed logging to have less overhead when it is turned off (patch #1038)
    * Fixed error message for broken add-on campaigns (bug #11078)
